@@ -147,7 +147,6 @@ public class NewSingleJobTest extends TestCase {
         // Publisher 1- XUnitPublisher
         Assert.assertTrue(publisherList.get(1) instanceof XUnitPublisher);
         XUnitPublisher xUnit = (XUnitPublisher)publisherList.get(1);
-        Assert.assertArrayEquals(null, xUnit.getThresholds());
         Assert.assertTrue(xUnit.getTypes()[0] instanceof CheckType);
         CheckType checkType = (CheckType)xUnit.getTypes()[0];
         Assert.assertEquals("**/test_results_*.xml", checkType.getPattern());
